Ajout des boutons

--- a/FrontEnd/assets/Css/style.css
+++ b/FrontEnd/assets/Css/style.css
@@ -58,6 +58,7 @@ header {
 	justify-content: space-between;
 	margin: 50px 0
 }
+
 section {
 	margin: 50px 0
 }
@@ -184,5 +185,8 @@ footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
+}
+.buttonFilter{
+	height:30px;
 }
 
