--- a/FrontEnd/assets/Css/style.css
+++ b/FrontEnd/assets/Css/style.css
@@ -269,7 +269,8 @@ footer nav ul {
   height: 30px;
   gap: 10px;
   width: 100%;
-  padding-bottom: 50px;
+  padding-bottom: 60px;
+  padding-top: 20px;
 }
 
 .btn-category {
