--- a/FrontEnd/assets/Css/style.css
+++ b/FrontEnd/assets/Css/style.css
@@ -295,3 +295,27 @@ footer nav ul {
 	color: white;
 }
 a {text-decoration: none;}
+
+/* chat gpt :  */
+/* Ajoutez ces styles pour la modal */
+.modale {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modale-contenu {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; 
+  height:500px
+}
