--- a/FrontEnd/assets/Css/style.css
+++ b/FrontEnd/assets/Css/style.css
@@ -324,15 +324,17 @@ a {
   border: 1px solid #888;
   width: 43%;
   border-radius: 10px;
-  
+
   height: 688px;
   min-width: 450px;
 }
 
-.modale-contenu h2 {
+.modale-contenu h2,
+.modale-contenu2 h2 {
   text-align: center;
   padding-top: 40px;
 }
+
 .modale-contenu input {
   position: relative;
   bottom: 20px;
@@ -398,13 +400,13 @@ a {
 .greybar2 {
   position: relative;
   text-align: center;
-  width: 66%;
+  width: 83%;
   margin: auto;
-  margin-top: 60px;
+  margin-top: 140px;
   border-top: 200px;
   border: solid 1px #b3b3b3;
   margin-bottom: 25px;
-} 
+}
 
 .closeModale--top-right {
   position: absolute;
@@ -414,44 +416,81 @@ a {
 
 /* Modale2 */
 
-
 .modalContent {
   display: flex;
   flex-direction: column;
 }
 
-.modalCategory, .modalTitle {
-  
+/* .modalCategory,
+#modalTitle {
   margin-left: 40px;
-}
+} */
 
 .formulaireAjoutProjet {
   display: none;
 }
 
+.modale-contenu2 {
+  position: relative;
+  background-color: #fefefe;
+  margin: 15% auto;
+  max-height: 670px;
+  padding: 25px;
+  border: 1px solid #888;
+  width: 43%;
+  border-radius: 10px;
+
+  height: 688px;
+  min-width: 450px;
+}
+.modale-contenu2 #validate {
+  position: relative;
+  bottom: 20px;
+  left: 50%;
+  transform: translatex(-50%);
+  height: 36px;
+  width: 37.6%;
+  border: none;
+}
 
 .greySquareModale2 {
   background-color: red;
   display: block;
   flex-direction: column;
-  width:66% ;
+  width: 66%;
   padding: 20px 0px 20 0px;
   margin: auto;
 }
 
-.modalTitleContainer{
-  padding-top: 40px;
+.modalTitleContainer {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+  gap: 15px;
 }
-#modalTitle ,#modalCategory {
- width: 80%;
- padding: 8px;
- margin-top: 30px;
- 
- display: block;
- text-align: center;
- box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+/*  */
+.modalCategory {
+  width: 89%;
+  padding: 8px;
+  margin-top: 15px;
+  display: block;
+  text-align: center;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
+#selectorTitle {
+  width: 86%;
+  padding: 8px;
+  /* margin-top: 15px; */
+  text-align: center;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+/*  */
+
+.textTitle {
+  width: 80%;
+}
 
 .mountaincontainer {
   display: flex;
@@ -466,69 +505,55 @@ a {
 }
 
 .fa-mountain-sun {
-  font-size:50px;
+  font-size: 50px;
   border: 8px solid #cbd6dc;
   border-color: #cbd6dc;
   border-radius: 5px;
   color: #cbd6dc;
-  width: 68.14px;   
-  height:59.62px;
-  display: flex;    
+  width: 68.14px;
+  height: 59.62px;
+  display: flex;
   justify-content: center;
   align-items: flex-end;
   margin: 2px;
-
-
-
-
-
-}
-
-
-#modalAddImageCategory{
-	margin-bottom: 25px;
 }
 
 .ImgUploadBtn {
-	background-color: rgb(183 180 180);
-	border: solid rgb(183 180 180);
-	color: rgb(99, 99, 179);
-	font-size: 12px;
-	cursor: pointer;
-  
-  width:37.6%;
+  background-color: rgb(183 180 180);
+  border: solid rgb(183 180 180);
+  color: rgb(99, 99, 179);
+  font-size: 12px;
+  cursor: pointer;
+
+  width: 37.6%;
 }
 
-.AddPicturePhrase{
-	cursor: pointer;
-	margin: 2% 30%;
-	padding: 7px 0 7px 0;
-	border-radius: 30px;
-	font-weight: bold;
-	display: flex;
-	justify-content: center;
+.AddPicturePhrase {
+  cursor: pointer;
+  margin: 2% 30%;
+  padding: 7px 0 7px 0;
+  border-radius: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
   background-color: #cbd6dc;
-  border:none; 
-  color:#306685;
+  border: none;
+  color: #306685;
 }
 
-.imgFormatAlert{
-	display: flex;
-	justify-content: center;
-	font-size: 8px;
+.imgFormatAlert {
+  display: flex;
+  justify-content: center;
+  font-size: 8px;
 }
 
-#imageUrl{
-	display: none;
+#imageUrl {
+  display: none;
 }
 
-#boutonValidation{
-	margin-top: 25px;
-	color: white;
-	background-color: grey;
-	border: grey;
-}
-
-#boutonValidation.active{
-	background-color: #1D6154;;
+#boutonValidation {
+  margin-top: 25px;
+  color: white;
+  background-color: grey;
+  border: grey;
 }
