--- a/FrontEnd/assets/Css/style.css
+++ b/FrontEnd/assets/Css/style.css
@@ -204,6 +204,7 @@ li:hover {
 #portfolio h2 {
   text-align: center;
   margin-bottom: 1em;
+  margin-left: 50%;
 }
 .gallery {
   width: 100%;
@@ -561,6 +562,25 @@ position: absolute;
   max-height:169px;
   width:129px;
   display: block;
+}
 
+
+
+#projectTitle{
+  display: inline-block;
+}
+
+.btn_modifier{
+  display: inline-block;
+  margin-left:10px;
+  text-decoration: none;
+  Border: none;
+  margin-right: 5px;
+
+}
+
+.btn_modifier fa{
+  
+  margin-right: 5px;
 
 }
